# MultiAgent-Isaacsim

./: .clocignore  .gitattributes  .gitignore  ARGUMENT_PARSER_README.md  CODE_STANDARDS_SUMMARY.md  CONFIG_OPTIMIZATION_SUMMARY.md  Framework_Architecture.md  Framework_Summary.md  INSTALL.md  ISAAC_SIM_FRAMERATE_SOLUTION.md  README.md  README_namespace.md  REFACTOR_SUMMARY.md  SIMULATION_LAYER_SUMMARY.md  WEBMANAGER_RESOURCE_OPTIMIZATION_GUIDE.md  WEBMANAGER_RESOURCE_REDUCTION_SUMMARY.md  WEBMANAGER_SETUP.md  amazon2local.py  argument_parser.py  astar.py  cf2x_config.py  clean.py  cleanup_config.yaml  code_standards_config.yaml  containers.py  controller.py  env.py  g1.py  grid_map.py  gym_env.py  imgs2depth_trt.py  isaac_sim_performance_analysis.py  isaacsim_common.py  isaacsim_init.py  isaacsim_interface.py  isaacsim_lidar.py  isaacsim_ros_communication_analysis.md  jetbot_config.py  main.py  main2.py  (+57 more)
UI/: WEBMANAGER_RESOURCE_OPTIMIZATION_GUIDE.md  WEBMANAGER_RESOURCE_REDUCTION_SUMMARY.md  WEBMANAGER_SETUP.md  package.json  start_webmanager.py  start_webmanager.sh  start_webmanager_enhanced.py  webmanager_isaac_sim_optimization.py  webmanager_resource_monitor.py  webmanager_resource_optimization.py
alg/: alg_path_planning_grid_map.py
application/: __init__.py  node_action_client_skill.py  node_action_server_plan_execution.py  skill_config.yaml  skill_manager.py  skill_registry.py  skill_ros_interface.py
asset/: asset_manager.py  assets_manager.py  people_usd_files.json  robot_usd_files.json  sensor_usd_files.json  usd_files.json  user_usd_files.json  user_usd_files_temp.json
camera/: camera_base.py  camera_cfg.py  camera_third_cfg.py  camera_third_person_cfg.py
code_cleanup/: __init__.py  config.py  dependency_analyzer.py  file_mover.py  models.py  safety_checker.py
code_standards_formatter/: config.py  models.py
config/: assets_scripts_linux.py  assets_scripts_windows.py  autel_perception_120x352.json  cfg_base.py  config_manager.py  config_parameter.yaml  config_parameter_example.yaml  isaacsim_grid_map.rviz  log_cfg.yaml  nav2_controller_no_costmap.yaml  nav2_simple.yaml  robot_swarm_active_flag.yaml  robot_swarm_active_flag_empty.yaml  robot_swarm_cfg.yaml  robot_swarm_cfg2.yaml  robot_swarm_cfg_empty.yaml  robot_with_sensors.yaml  sim_cfg.yaml  skill_config.yaml  usd_path.yaml
controller/: controller_base.py  controller_cf2x.py  controller_cfg_loader.py  controller_head_to.py  controller_pid.py  controller_pid_jetbot.py  controller_policy.py  controller_policy_g1.py  controller_policy_h1.py  normalizer.py  pickle.py
delivery_task/: robot1_problem.pddl
docs/: CARLA_MIGRATION_ANALYSIS.md  FRAMEWORK_ARCHITECTURE.md  GSI_to_ROS2_Action_Migration.md  README.md  SKILL_ROS_INTERFACE.md  WORLD_API_COMPARISON.md  migrate.md  navigate_to_skill_architecture.md  omni_anim_people_api.md  state_machine_design_for_paper.md
environment/: env.py
files/: assets_scripts_linux.py  assets_scripts_windows.py  env_cfg.yaml  robot_swarm_active_flag.yaml  robot_swarm_cfg.yaml  robot_swarm_cfg2.yaml  robot_swarm_cfg_empty.yaml  sim_cfg.yaml  usd_path.yaml  variables.py
gsi_msgs/: gsi_msgs_helper.py
gsi_msgs/src/plan_msgs/: CMakeLists.txt  package.xml
gsi_msgs/src/plan_msgs/action/: SkillExecution.action
gsi_msgs/src/plan_msgs/msg/: Parameter.msg  Plan.msg  RobotSkill.msg  SkillFeedback.msg  SkillInfo.msg  VelTwistPose.msg
gsi_msgs/src/scene_msgs/: CMakeLists.txt  package.xml
gsi_msgs/src/scene_msgs/msg/: PrimTransform.msg  SceneModifications.msg
learning/: lesson1_create_cube.py  lesson3_hello_robot.py  lesson3_hello_robot_joint.py  lesson4_robot_controller.py  lesson5_robot_differential_controller.py
learning_lesson/: getting_start.py  learn_camear.py  learn_camera.py  learn_camera2.py  lesson4_robot_controller.py  lesson5_robot_differential_controller.py
lidar/: lidar_base.py  lidar_cfg.py
llm/: home.xlsx  proj.py  readme.md
log/: log_manager.py
logs/: app.md
map/: map_base.py  map_grid_map.py  map_semantic_map.py  octomap_convert.py
navigation/: casadi_mpc.py  node_controller_mpc.py  node_navigation.py  node_path_planner_ompl.py  node_traj_generator.py  node_trajectory_generator.py  path_generator.py  traj_manager.py  visual_mpc.py
path_planning/: path_planning_astar.py
pddl/: README.md  agent_schedule.py  check_pddl_engine.py  domain.pddl  plan.py  problem.pddl  requirements.txt  solver.py  solver_p.py
physics_engine/: isaacsim_simulation_app.py  isaacsim_utils.py  omni_utils.py  pxr_utils.py
recycle_bin/: map_grid_map.py  path_planning_astar.py  simulator.py  swarm_node.py  value_map.npy
robot/: __init__.py  robot.py  robot_base.py  robot_cf2x.py  robot_cf2x_config.py  robot_cfg.py  robot_cfg_drone_cf2x.py  robot_cfg_g1.py  robot_cfg_h1.py  robot_cfg_jetbot.py  robot_drone.py  robot_drone_autel.py  robot_drone_cf2x.py  robot_entity.py  robot_g1.py  robot_h1.py  robot_jetbot.py  robot_swarm_cfg.yaml  robot_swarm_manager.py  robot_trajectory.py  swarm_manager.py  target.py
ros/: action_client.py  action_server.py  env.py  example_action_usage.py  node.py  node_action_client_skill.py  node_action_server_plan_execution.py  node_planner_ompl.py  node_robot.py  node_scene_monitor.py  node_server_planner_nav2.py  node_server_planner_ompl.py  node_time.py  plan_execution_action_server_node.py  plan_execution_node.py  robot_node.py  robot_ros_manager.py  ros_control_bridge.py  ros_manager.py  ros_manager_isaacsim.py  ros_manager_robot.py  ros_node.py  ros_swarm.py  scene_monitor_node.py  sensor_ros_bridge.py  skill_action_client_node.py  start_pycharm_with_ros2.sh  swarm_node.py
ros_msg/: gsi_msgs_helper.py
saved_scenes/: current_scene_with_cars_flattened.usd  current_scene_with_cars_references.usd
scene/: flatroom4.usd  scene_manager.py  simple_city.usd  simple_city2.usd
scene_generation/: README.md
scenes/: semantic_scene_with_cars.usd
sensor/: sensor_cfg.py
simulation/: __init__.py  actor.py  actor_blueprint.py  blueprint.py  control.py  robot_actor.py  sensor_actor.py  server.py  static_actor.py  transform.py  world.py
(+656 files in other folders)
