<?xml version="1.0"?>
<package format="3">
  <name>plan_msgs</name>
  <version>0.0.1</version>
  <description>Message definitions for planner (plans, skills, parameters)</description>

  <maintainer email="chenmingyang@westlake.edu.cn">Ming Chen</maintainer>
  <license>MIT</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- For generating interfaces -->
  <build_depend>rosidl_default_generators</build_depend>

  <!-- Msg dependencies used inside our .msg files -->
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <!-- For using generated interfaces at runtime -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Mark as an interface package -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
