<?xml version="1.0"?>
<package format="3">
  <name>scene_msgs</name>
  <version>0.0.1</version>
  <description>Message definitions for scene changes and USD monitoring</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Interface generation -->
  <build_depend>rosidl_default_generators</build_depend>

  <!-- External interface dependency used in .msg -->
  <depend>geometry_msgs</depend>

  <!-- Runtime for using generated interfaces -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Mark as an interface package -->
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
